# play_motion2

./: README.md
play_motion2/: CHANGELOG.rst  CMakeLists.txt  package.xml
play_motion2/config/: approach_planner_config.yaml  motion_planner_config.yaml
play_motion2/include/play_motion2/: approach_planner.hpp  motion_loader.hpp  motion_planner.hpp  play_motion2.hpp  play_motion2_helpers.hpp  types.hpp
play_motion2/launch/: play_motion2.launch.py
play_motion2/src/: play_motion2_main.cpp
play_motion2/src/play_motion2/: approach_planner.cpp  motion_loader.cpp  motion_planner.cpp  play_motion2.cpp  play_motion2_helpers.cpp
play_motion2/test/: config.yaml  motion_loader_test.cpp  motion_loader_test.hpp  play_motion2_config.yaml  play_motion2_helpers_test.cpp  play_motion2_helpers_test.hpp  play_motion2_node_test.cpp  play_motion2_node_test.hpp  play_motion2_node_test.launch.py  play_motion2_test.cpp  play_motion2_test.hpp
play_motion2/test/rrbot/: controller_1.launch.py  controller_1.yaml  controller_2.launch.py  controller_2.yaml  controller_manager.yaml  controllers.launch.py  controllers.yaml  joint_state_broadcaster.launch.py  joint_state_broadcaster.yaml  joint_trajectory_controller.launch.py  joint_trajectory_controller.yaml  rrbot.launch.py  rrbot.rviz  rrbot.xacro  rrbot_system.cpp  rrbot_system.hpp  rrbot_system.xml
play_motion2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
play_motion2_msgs/action/: PlayMotion2.action
play_motion2_msgs/srv/: IsMotionReady.srv  ListMotions.srv
