<?xml version="1.0"?>
<package format="3">
  <name>play_motion2</name>
  <version>0.0.1</version>
  
  <description>Play a pre-recorded motion on a robot</description>

  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>Apache License 2.0</license>

  <author email="noel.jimenez@pal-robotics.com">Noel Jimenez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>play_motion2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
   
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
