<?xml version="1.0"?>
<package format="3">
  <name>play_motion2</name>
  <version>0.0.1</version>
  
  <description>Play a pre-recorded motion on a robot</description>

  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>Apache License 2.0</license>

  <author email="noel.jimenez@pal-robotics.com">Noel Jimenez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>play_motion2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>hardware_interface</test_depend>
  <test_depend>launch_pal</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>pluginlib</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
