<?xml version="1.0"?>
<package format="3">
  <name>play_motion2</name>
  <version>0.0.15</version>

  <description>Play a pre-recorded motion on a robot</description>

  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>Apache License 2.0</license>

  <author email="noel.jimenez@pal-robotics.com">Noel Jimenez</author>

  <url type="website">https://github.com/pal-robotics/play_motion2</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>play_motion2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>lifecycle_msgs</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>joint_state_broadcaster</test_depend>
  <test_depend>joint_trajectory_controller</test_depend>
  <test_depend>launch_pal</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>pluginlib</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
