<?xml version="1.0"?>
<package format="3">
  <name>play_motion2_msgs</name>
  <version>0.0.7</version>

  <description>Play a pre-recorded motion on a robot</description>

  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>Apache License 2.0</license>

  <author email="noel.jimenez@pal-robotics.com">Noel Jimenez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
